<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_baseline_home_24"
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            />
        <item
            android:icon="@drawable/ic_baseline_person_24"
            android:id="@+id/nav_canhan"
            android:title="@string/nav_canhan"
            />
<!--        <item-->
<!--            android:id="@+id/nav_thongbao"-->
<!--            android:icon="@drawable/ic_baseline_notifications_24"-->
<!--            android:title="@string/nav_thongbao" />-->

    </group>
<!--    <item android:title="@string/nav_tienich">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:icon="@drawable/ic_baseline_local_library_24"-->
<!--                android:id="@+id/nav_camnang"-->
<!--                android:title="@string/nav_camnang" />-->
<!--            <item-->
<!--                android:icon="@drawable/ic_baseline_book_24"-->
<!--                android:id="@+id/nav_nhaki"-->
<!--                android:title="@string/nav_nhatki" />-->
<!--            <item-->
<!--                android:icon="@drawable/ic_baseline_calendar_month_24"-->
<!--                android:id="@+id/nav_lich"-->
<!--                android:title="@string/nav_lich" />-->
<!--        </menu>-->
<!--    </item>-->
    <group android:checkableBehavior="single">
                    <item
                        android:icon="@drawable/ic_baseline_logout_24"
                        android:id="@+id/nav_logout"
                        android:title="@string/nav_logout" />
    </group>
<!--    <item android:title="@string/nav_lienhe">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:icon="@drawable/ic_baseline_library_books_24"-->
<!--                android:id="@+id/nav_sendmail"-->
<!--                android:title="@string/nav_sendmail" />-->
<!--            <item-->
<!--                android:icon="@drawable/ic_baseline_library_books_24"-->
<!--                android:id="@+id/nav_dieukhoan"-->
<!--                android:title="@string/nav_dieukhoan" />-->

<!--        </menu>-->
<!--    </item>-->
</menu>