<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
    android:orientation="vertical"
    tools:context=".create.createcalendar_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txTitlecalendar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/tieude"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_titlecalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txMap"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/diachi"
            app:layout_constraintEnd_toEndOf="@+id/txTitlecalendar"
            app:layout_constraintStart_toStartOf="@+id/txTitlecalendar"
            app:layout_constraintTop_toBottomOf="@+id/txTitlecalendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_mapcalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tx_note"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/note"

            app:layout_constraintEnd_toEndOf="@+id/txMap"
            app:layout_constraintStart_toStartOf="@+id/txMap"
            app:layout_constraintTop_toBottomOf="@+id/txMap">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_notecalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tx_timecalendar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/time"
            app:layout_constraintEnd_toEndOf="@+id/tx_note"
            app:layout_constraintStart_toStartOf="@+id/tx_note"
            app:layout_constraintTop_toBottomOf="@+id/tx_note">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTimecalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txinput_day"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"

            android:layout_marginEnd="24dp"
            android:hint="@string/date"
            app:layout_constraintEnd_toEndOf="@+id/tx_timecalendar"
            app:layout_constraintStart_toStartOf="@+id/tx_timecalendar"
            app:layout_constraintTop_toBottomOf="@+id/tx_timecalendar">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDaycalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>